# second-brain

./: .gitignore  pasteee.md
backend/: .env  pyproject.toml  requirements.txt
backend/api/: admin.py  ai_agent.py  ai_utils.py  models.py  serializers.py  views.py
backend/api/ai/: __init__.py  agents.py  chat.py  config.py  embeddings.py  scheduler.py
backend/api/management/commands/: embed_notes.py
backend/api/migrations/: 0001_initial.py  0002_initial.py  0003_note_updated_at_alter_note_body_alter_note_tags_and_more.py  0004_bookmarkfolder_category_bookmark.py  0005_habit_habitlog.py  0006_habit_time_of_day_calendarevent_routinesubitem_and_more.py  0007_learningpath_pathstep.py  0008_note_source_hash_note_source_type.py  0009_calendarevent_linked_step.py  0010_userprofile_skill.py  0011_habit_target_value_habitlog_actual_value.py  0012_habit_weekdays_alter_habit_time_of_day.py  0013_habit_streak_count.py  0014_habit_order.py
backend/api/views/: __init__.py  ai_views.py  base.py  bookmarks.py  calendar.py  habits.py  imports.py  learning.py  notes.py
backend/core/: settings.py  urls.py
dashboard-design-conversion/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
dashboard-design-conversion/src/: Dashboard.tsx  index.css  main.tsx  theme.ts
frontend/: .env  .env.production  README.md  package-lock.json  package.json
frontend/src/: App.jsx  ProtectedRoute.jsx  api.js  theme.js
project details/: FLOWCHART_ROADMAP.md  Present_flowchat.md
project_details/: FLOWCHART_ROADMAP.md  Links.md  Second Brain API.yaml
(+44 files in other folders)
